remplacement des noms des clés du JSON en anglais/Mise à jour du programme pour le système Pathfinder

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --medium-blue: rgb(61, 79, 93);
   --medium-orange: rgb(175, 86, 62);
   --dark-purple: rgb(63, 20, 133);
-  --violet: rgb(149, 113, 223);
+  --violet: rgb(138, 101, 211);
   --blue: rgb(22, 184, 229);
   --rose: rgb(235, 164, 145);
   --text-light: rgb(241, 249, 255);
@@ -190,15 +190,14 @@ body {
   border-radius: 5px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 45px;
-
 }
 
 .stats-section h3 {
   grid-column: 1/4;
   grid-row: 1/1;
   margin: 0;
-  padding-left: 10px;
+  padding: 10px;
+  padding-left: 20px;
   align-content: center;
 }
 
