--- a/style.css
+++ b/style.css
@@ -160,6 +160,12 @@ body {
   margin-bottom: 0;
 }
 
+.info-title {
+  font-size: 18px;
+  text-align: center;
+  height: 100px;
+}
+
 .round {
   width: 50px;
   height: 50px;
