--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .home-title {
@@ -84,6 +86,19 @@ body {
   color: inherit;
   display: flex;
   justify-content: center;
+}
+
+/* 
+-----------------------------------------------------
+                    PAGE DETAIL 
+-----------------------------------------------------
+*/
+
+.page-header {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  background-color: var(--bg-light);
 }
 
 .pj-recap {
@@ -187,8 +202,6 @@ body {
   flex-direction: column;
   margin: 10px;
   color: var(--text-dark);
-  overflow-x: scroll;
-  max-height: calc(100% - 130px);
   width: 90%;
 }
 
