--- a/style.css
+++ b/style.css
@@ -61,9 +61,17 @@ body {
   background-size: cover;
 }
 
+nav {
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .card {
-  width: 650px;
-  height: 200px;
+  width: 100%;
+  height: 250px;
   border: 3px solid var(--bg-light);
   border-radius: 10px;
   font-size: 30px;
@@ -86,6 +94,7 @@ body {
 }
 
 .link-card {
+  width: 60%;
   text-decoration: none;
   color: inherit;
   display: flex;
@@ -321,6 +330,11 @@ body {
 /* AFFICHAGE MOBILE */
 
 @media screen and (max-width: 700px){
+  .card {
+    width: 100%;
+    height: 150px;
+  }
+
   .link-card {
     width: 90%;
   }
