--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ body {
 .stats-section {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin: 0;
   color: var(--text-dark);
   width: 95%;
 }
@@ -280,6 +280,7 @@ body {
   border-radius: 5px;
   display: grid;
   grid-template-columns: repeat(1fr);
+  padding: 0;
 }
 
 .stats-section h3 {
