--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ body {
   padding: 20px 0;
   background-color: var(--dark-blue);
   border-radius: 5px;
-  margin: 10px;
   width: 90%;
 }
 
@@ -62,7 +61,7 @@ body {
 }
 
 .card {
-  width: 650px;
+  width: 100%;
   height: 200px;
   border: 3px solid var(--bg-light);
   border-radius: 10px;
@@ -72,6 +71,7 @@ body {
   align-items: center;
   justify-content: center;
   text-shadow: 2px 2px 2px var(--dark-blue);
+  margin: 0;
 }
 
 .title {
@@ -90,6 +90,8 @@ body {
   color: inherit;
   display: flex;
   justify-content: center;
+  width: 90%;
+  height: 220px;
 }
 
 /* 
@@ -103,6 +105,9 @@ body {
   position: sticky;
   top: 0;
   background-color: var(--bg-light);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-body-page {
@@ -122,9 +127,8 @@ body {
   display: flex;
   justify-content: space-between;
   color: var(--text-dark);
-  width: 100%;
+  width: 90%;
   margin: 20px 0;
-  padding: 0 10px;
 }
 
 .pj-recap-dice {
@@ -155,9 +159,9 @@ body {
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 5px;
+  margin: 0;
 }
 
 .hogwards-color {
@@ -324,41 +328,45 @@ body {
 
 @media screen and (max-width: 400px) {
   .pj-recap {
-    width: 100%;
+    width: 98%;
     margin-bottom: 10px;
-    padding: 0 0px;
   }
 
   .pj-recap article {
-    margin-right: 5px;
-  }
-
-  .pj-recap article:last-child {
-    margin-right: 0;
+    margin: 0 2px;
   }
 
   .round {
     min-width: 30px;
     min-height: 30px;
   }
+
+  .link-card {
+    height: 160px;
+  }
+
+  .card {
+    height: 150px;
+  }
 }
 
-@media screen and (max-width: 700px){
-  .link-card {
-    width: 90%;
-  }
+@media screen and (min-width: 401px) and (max-width: 700px){
 
   .pj-recap {
     padding: 0 5px;
     width: 100%;
   }
 
-  .pj-recap article {
-    margin: 0 5px;
+  .link-card {
+    height: 200px;
   }
 
-  .link-card h2 {
-    margin: 10px 0;
+  .card {
+    height: 180px;
+  }
+
+  .pj-recap article {
+    margin: 0 5px;
   }
 
   .stats-section p, .pj-recap p {
