--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   padding: 20px 0;
   background-color: var(--dark-blue);
   border-radius: 5px;
-  width: 90%;
+  width: 70%;
 }
 
 .aria-icon {
@@ -90,7 +90,7 @@ body {
   color: inherit;
   display: flex;
   justify-content: center;
-  width: 90%;
+  width: 70%;
   height: 220px;
 }
 
@@ -127,7 +127,7 @@ body {
   display: flex;
   justify-content: space-between;
   color: var(--text-dark);
-  width: 90%;
+  width: 60%;
   margin: 20px 0;
 }
 
@@ -160,7 +160,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5px;
+  padding: 10px;
   margin: 0;
 }
 
@@ -342,11 +342,16 @@ body {
   }
 
   .link-card {
+    width: 90%;
     height: 160px;
   }
 
   .card {
     height: 150px;
+  }
+
+  .home-title {
+    width: 90%;
   }
 }
 
@@ -358,6 +363,7 @@ body {
   }
 
   .link-card {
+    width: 90%;
     height: 200px;
   }
 
@@ -375,5 +381,9 @@ body {
 
   #nb-games {
     font-size: 1.2rem;
+  }
+
+  .home-title {
+    width: 90%;
   }
 }
