--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@
 
 :root {
   --dark-blue: rgb(27, 40, 49);
+  --dark-blue-hover: rgba(27, 40, 49, 0.7);
   --medium-blue: rgb(61, 79, 93);
   --medium-orange: rgb(175, 86, 62);
+  --medium-orange-hover: rgba(175, 86, 62, 0.5);
   --dark-purple: rgb(63, 20, 133);
+  --dark-purple-hover: rgba(63, 20, 133, 0.8);
   --violet: rgb(138, 101, 211);
-  --blue: rgb(22, 184, 229);
+  --blue: rgb(29, 100, 154);
   --rose: rgb(235, 164, 145);
   --text-light: rgb(241, 249, 255);
   --text-dark: rgb(27, 27, 27);
@@ -29,6 +32,10 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
+}
+
+a {
+  color: inherit;
 }
 
 .home-title {
@@ -92,6 +99,34 @@ body {
   justify-content: center;
   width: 70%;
   height: 220px;
+}
+
+/* 
+-----------------------------------------------------
+                    NAVBAR 
+-----------------------------------------------------
+*/
+
+.nav-section {
+  width: 100%;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.nav-item {
+  text-decoration: none;
+  font-weight: bold;
+  padding: 5px 10px;
+  color: var(--text-light);
+  text-shadow: 1px 1px 2px var(--dark-blue);
+  cursor: pointer;
+  font-size: 18px;
+  border: 2px solid transparent;
+  border-radius: 10px;
 }
 
 /* 
@@ -169,6 +204,11 @@ body {
   color: var(--text-light);
 }
 
+.hogwards-hover:hover {
+  border: 2px solid var(--blue);
+  background-color: var(--dark-blue-hover);
+}
+
 .hogwards-button {
   background-color: var(--dark-blue);
   color: var(--text-light);
@@ -197,6 +237,11 @@ body {
   color: var(--text-dark);
 }
 
+.aria-hover:hover {
+  border: 2px solid var(--medium-orange);
+  background-color: var(--medium-orange-hover);
+}
+
 .aria-button {
   background-color: var(--medium-orange);
   color: var(--text-light);
@@ -217,6 +262,11 @@ body {
 .pathfinder-color {
   background-color: var(--violet);
   color: var(--text-light);
+}
+
+.pathfinder-hover:hover {
+  border: 2px solid var(--violet);
+  background-color: var(--dark-purple-hover);
 }
 
 .pathfinder-button {
