--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 a {
@@ -137,8 +137,6 @@ a {
 
 .page-header {
   width: 100%;
-  position: sticky;
-  top: 0;
   background-color: var(--bg-light);
   display: flex;
   flex-direction: column;
@@ -151,6 +149,8 @@ a {
   color: var(--text-dark);
   width: 100%;
   align-items: center;
+  overflow-y: scroll;
+  flex-grow: 1;
 }
 
 #nb-games {
@@ -187,6 +187,7 @@ a {
 
 .dice-info {
   margin: 0;
+  text-align: center;
 }
 
 .pj-recap article {
@@ -388,10 +389,10 @@ a {
 
 /* AFFICHAGE MOBILE */
 
-@media screen and (max-width: 400px) {
+@media (max-width: 400px) {
   .pj-recap {
     width: 98%;
-    margin-bottom: 10px;
+    margin: 10px 0;
   }
 
   .pj-recap article {
@@ -415,9 +416,13 @@ a {
   .home-title {
     width: 90%;
   }
+
+  .title {
+    height: 50px;
+  }
 }
 
-@media screen and (min-width: 401px) and (max-width: 700px){
+@media (min-width: 401px) and (max-width: 700px){
 
   .pj-recap {
     padding: 0 5px;
@@ -448,4 +453,32 @@ a {
   .home-title {
     width: 90%;
   }
+}
+
+@media (min-width: 701px) and (max-width: 1000px) {
+  .pj-recap {
+    width: 80%;
+  }
+}
+
+@media (orientation: landscape) and (max-height: 450px) {
+  .title {
+    height: 50px;
+  }
+
+  .pj-recap {
+    margin: 10px 0;
+  }
+
+  .pj-recap h3 {
+    margin-top: 0;
+  }
+
+  .pj-recap-crit {
+    margin: 5px;
+  }
+
+  .pj-recap-crit p:first-child {
+    margin-bottom: 5px;
+  }  
 }
