--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ a {
   display: flex;
   justify-content: space-between;
   color: var(--text-dark);
-  width: 60%;
+  width: 70%;
   margin: 20px 0;
 }
 
@@ -420,6 +420,10 @@ a {
   .title {
     height: 50px;
   }
+
+  .pj-recap h3 {
+    margin-top: 0;
+  }
 }
 
 @media (min-width: 401px) and (max-width: 700px){
@@ -453,11 +457,15 @@ a {
   .home-title {
     width: 90%;
   }
+
+  .pj-recap h3 {
+    margin-top: 0;
+  }
 }
 
 @media (min-width: 701px) and (max-width: 1000px) {
   .pj-recap {
-    width: 80%;
+    width: 90%;
   }
 }
 
