--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@
   --text-dark: rgb(27, 27, 27);
   --bg-light: rgb(245, 251, 255);
   --white: rgb(255, 255, 255);
-  --light-red: rgb(255, 114, 114);
-  --red: rgb(221, 2, 2);
-  --dark-red: rgb(119, 3, 3);
+  --light-yellow: rgb(255, 233, 159);
+  --yellow: rgb(243, 207, 88);
+  --golden: rgb(214, 164, 0);
+  --dark-yellow: rgb(90, 69, 0);
 
   background-color: var(--bg-light);
   color: var(--text-light);
@@ -319,33 +320,33 @@ a {
 }
 
 .goldensun-color {
-  background-color: var(--red);
-  color: var(--dark-red);
+  background-color: var(--yellow);
+  color: var(--text-dark);
 }
 
 .goldensun-hover {
-  box-shadow: 0 0 10px 6px var(--dark-red);
-  background-color: var(--red);
+  box-shadow: 0 0 10px 6px var(--golden);
+  background-color: var(--yellow);
 }
 
 .goldensun-hover:hover {
-  box-shadow: 0 0 10px 5px var(--red);
+  box-shadow: 0 0 10px 5px var(--yellow);
 }
 
 .goldensun-button {
-  background-color: var(--dark-red);
+  background-color: var(--golden);
   color: var(--light-red);
 }
 
 .goldensun-color-title {
-  background-color: var(--dark-red);
-  color: var(--light-red);
+  background-color: var(--yellow);
+  color: var(--white);
   border-radius: 3px 3px 0 0;
-  text-shadow: 2px 2px 2px var(--dark-red);
+  text-shadow: 2px 2px 2px var(--dark-yellow);
 }
 
 .goldensun-article {
-  border: 1px solid var(--dark-red);
+  border: 1px solid var(--dark-yellow);
   margin-bottom: 20px;
 }
 /* --------------------------------------------- */
